unconsistent layout bugfix

--- a/src/Styles/modular/charDetails.module.css
+++ b/src/Styles/modular/charDetails.module.css
@@ -125,9 +125,9 @@
 }
 
 .pvp-details {
-    width: 100%;
-    max-width: 100px;
-    min-height: 154px;
+    width: 97.67px;
+    max-width: 97px;
+    height: 192px;
     display: grid;
     grid-template-rows: repeat(3, auto);
     grid-template-columns: auto;
@@ -136,7 +136,7 @@
   
     justify-items: center;
     background: rgba(51, 65, 85, 0.75);
-    padding: 12px;
+    padding: 12px 0px;
     border-radius: 6px;
     text-align: center;
     flex: 1;
